--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "motion": "^12.23.12",
     "next": "15.4.5",
+    "p5": "^2.0.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -19,6 +20,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/p5": "^1.7.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
